change of background in fp and minor changes

--- a/index.html
+++ b/index.html
@@ -97,21 +97,27 @@
             <a class="button stroke smoothscroll animate-intro" href="#infos" title="">Virtuoso</a>
             <a class="button stroke smoothscroll animate-intro" href="#download" title="">Fashion Photography</a>
 					</div>
+					
+					<div style="width:100%;height:25%;left:5%;">
+					<img src = "images/a.png" class="animate-intro" style="width:20%; height:20%; float:left; margin:2%;border:none;box-shadow:none">
+					<img src ="images/b.png" class="animate-intro" style="width:20%; height:20%; float:left; margin:2%;border:none;box-shadow:none">
+					<img src ="images/c.png" class="animate-intro" style="width:20%; height:20%; float:left; margin:2%;border:none;box-shadow:none">
+					<img src ="images/d.png" class="animate-intro" style="width:20%; height:20%; float:left; margin:2%;border:none;box-shadow:none">
+					</div>
 
 			  	</div> <!-- /twelve -->
 		   </div> <!-- /row -->
-
+					
 		</section> <!-- /intro -->
 
 
 		<!-- features
    	================================================== -->
-		<section id="features">
-
+		<section id="features" ">
 			<div class="row section-intro group animate-this">
 	   		<div class="col-twelve with-bottom-line">
 
-	   			<h2 class="">Features You'll Love.</h2>
+	   			<h2 class="">Tango</h2>
 
 	   			<p class="lead">Lorem ipsum Tempor do Excepteur nulla aute deserunt reprehenderit aute commodo aliquip laboris velit eu esse exercitation ex fugiat pariatur aute consequat. Lorem ipsum Fugiat mollit quis qui. Lorem ipsum Duis Excepteur Duis magna fugiat incididunt qui id quis dolor nisi irure proident labore ut in incididunt eiusmod est anim.</p>
 
@@ -314,18 +320,18 @@
 
 	   <!-- download
    	================================================== -->
-   	<section id="download" style="background: url('images/fp.jpg'); background-size: cover; background-repeat:no-repeat; background-position: top right;">
+   	<section id="download" style="background: url('images/fp4.jpg'); background-size: cover; background-repeat:no-repeat; background-position: top right;">
 
 	   	<div class="overlay"></div>
 
 	   	<div class="row download-content" >
 	   		<div class="col-twelve">
 
-					<div class="text-part" style=" background: rgba(0, 0, 0, 0.55); padding: 30px 40px; box-shadow: 0 0 5px #111; padding-top:75px">
+					<div class="text-part" style=" background: rgba(0, 0, 0, .80); padding: 30px 40px; box-shadow: 0 0 10px #111; padding-top:75px" >
 						<h2 class="animate-this">Fashion Photography</h2>
 
 			   		<p class="lead animate-this">A one day workshop in Fashion Photography gives you a complete idea of camera settings and the settings to control lights with hands-on practice to take creative and innovative photographs. And also you will get a live shoot on a model.This intensive photography workshop will teach you all you need to know when it comes to fashion photography and studio lighting.</p>
-                    <ul class="lead animate-this">
+                    <ul class="lead animate-this" style="line-height:42.85px">
                     <li>Familiarize yourself with studio lights</li>
        		        <li>History of Fashion Photography.</li>
     	     		<li>Working With models (Male & Female)</li>
