--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta charset="utf-8">
 	<title>Workshops & Activities | Oasis 2016</title>
 	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="author" content ="">
 
    <!-- mobile specific metas
    ================================================== -->
@@ -38,7 +38,7 @@
    ================================================== -->
    <header class="main-header">
 
-   	<div class="logo">
+   	<div class="logo animate-intro">
 	      <a href="index.html">Oasis</a>
 	   </div>
 
@@ -53,20 +53,12 @@
    	<h3>Navigation</h3>
 		<ul class="nav-list">
 			<li><a class="smoothscroll" href="#intro" title="">Home</a></li>
-			<li><a class="smoothscroll" href="#features" title="">Tango</a></li>
+			<!--<li><a class="smoothscroll" href="#features" title="">Tango</a></li>-->
 			<li><a class="smoothscroll" href="#infos" title="">Virtuoso</a></li>
 			<li><a class="smoothscroll" href="#download" title="">Fashion Photography</a></li>
 		</ul>
 
-		<h3>We Recommend Dreamhost</h3>
-		<p class="sponsor-text">
-			Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">DreamHost</a>.
-			Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.
-			<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-		</p>
-
-		<div class="action">
-			<a class="button" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
+		
 		</div>
 
 	</nav> <!-- /menu-nav-wrap -->
@@ -93,7 +85,7 @@
 					</h1>
 
 					<div class="buttons">
-						<a class="button stroke smoothscroll animate-intro" href="#features" title="">Tango</a>
+						<!--<a class="button stroke smoothscroll animate-intro" href="#features" title="">Tango</a>-->
             <a class="button stroke smoothscroll animate-intro" href="#infos" title="">Virtuoso</a>
             <a class="button stroke smoothscroll animate-intro" href="#download" title="">Fashion Photography</a>
 					</div>
@@ -113,7 +105,7 @@
 
 		<!-- features
    	================================================== -->
-		<section id="features" ">
+		<!-- <section id="features" ">
 			<div class="row section-intro group animate-this">
 	   		<div class="col-twelve with-bottom-line">
 
@@ -141,7 +133,7 @@
 
 						</div>
 
-					</div> <!-- /bgrid -->
+					</div> 
 
 					<div class="bgrid feature animate-this">
 
@@ -156,8 +148,7 @@
 
 						</div>
 
-					</div> <!-- /bgrid -->
-
+					</div> 
 					<div class="bgrid feature animate-this">
 
 						<span class="feature-count">03.</span>
@@ -171,7 +162,7 @@
 
 						</div>
 
-					</div> <!-- /bgrid -->
+					</div> 
 
 					<div class="bgrid feature animate-this">
 
@@ -186,8 +177,7 @@
 
 						</div>
 
-					</div> <!-- /bgrid -->
-
+					</div> 
 					<div class="bgrid feature animate-this">
 
 						<span class="feature-count">05.</span>
@@ -201,7 +191,7 @@
 
 						</div>
 
-					</div> <!-- /bgrid -->
+					</div> 
 
 					<div class="bgrid feature animate-this">
 
@@ -216,13 +206,13 @@
 
 						</div>
 
-					</div> <!-- /bgrid -->
+					</div> 
 
-				</div> <!-- /features-list -->
+				</div> 
 
-			</div> <!-- /features-wrap -->
+			</div> <
 
-		</section> <!-- /features -->
+		</section> -->
 
 
 		<!-- infos
@@ -247,8 +237,8 @@
 
    					<p class="animate-this" data-animate="fadeInLeft">Learn the guitar from the base up with this tutorial apt for all levels of guitarists! Sidharth Kadadi, the lead guitarist of the Mumbai based band, Zygnema, is here to share his knowledge and experience with you.</p>
 
-   					<!--<a href="#" class="button animate-this" data-animate="fadeInLeft">Learn More</a>-->
-
+   					<a href="#" class="button animate-this" data-animate="fadeInLeft" style ="float:left;margin:4%;">Interested</a>
+   					<a href="#" class="button animate-this" data-animate="fadeInLeft" style ="float:left;margin:4%;">Joining</a>
    				</div>
 
    			</div> <!-- /info-entry-content -->
@@ -274,8 +264,9 @@
    					<h2 class="animate-this" data-animate="fadeInRight">Virtuoso Drums</h2>
 
    					<p class="animate-this" data-animate="fadeInRight">Learn the drum from scratch in this comprehensive drum clinic held by Aadhar Malhotra, a hard core metal drummer currently playing for one</p>
-
-   					<!--<a href="#" class="button animate-this" data-animate="fadeInRight">Learn More</a>-->
+   					<a href="#" class="button animate-this" data-animate="fadeInLeft" style ="float:left;margin:4%;">Interested</a>
+   					<a href="#" class="button animate-this" data-animate="fadeInLeft" style ="float:left;margin:4%;">Joining</a>
+   					
 
    				</div>
 
@@ -301,7 +292,8 @@
 
             <p class="animate-this" data-animate="fadeInLeft">Learn vocals from the woman who has the voice of a Nightingale and develop your singing voice. Manta Sidhu, the lead vocalist of a Delhi based Alternative-Pop band MAP, is here to teach you.</p>
 
-            <!--<a href="#" class="button animate-this" data-animate="fadeInLeft">Learn More</a>s-->
+            <a href="#" class="button animate-this" data-animate="fadeInLeft" style ="float:left;margin:4%;">Interested</a>
+   			<a href="#" class="button animate-this" data-animate="fadeInLeft" style ="float:left;margin:4%;">Joining</a>
 
           </div>
 
@@ -345,8 +337,11 @@
 			         <li>Practical use, and various ways of lighting on different backgrounds</li>
 			         <li>Lighting tricks</li></ul>
 			         <p class="lead animate-this">We welcome students with or without a DSLR both.</p>
-
-			         </p>
+			         <div class="buttons">
+					<a href="#" title="" class ="animate-this" style="color:white;font-family:'roboto-light';font-size:20px;font-weight:100;padding:2%;margin:2%;border:2px solid white" >Interested</a>
+            		<a href="#" title="" class ="animate-this" style="color:white;font-family:'roboto-light';font-size:20px;border:2px solid white;font-weight:100;padding:2%;margin:2%">Joining</a>
+					</div>
+		
 					</div>
                     </div>
 			   	 	</div>
